@@ -17,6 +17,8 @@ Version 0.6.7
 - Roster Module now Supports use of dimension name for AO
 - Fixed login procedure for AoC patch 1.06
 - Changed name of AoC Testlive server so that it doesn't get confused with AO Testlive
+- Fixed an issue with invalid users on AOC causing crashes.
+- Xyphos items database now used by default for AO. Please report issues at http://www.xyphos.com/viewforum.php?f=7
 
 New Modules:
 - Added AdminsUI Module to allow members to easily see the admin list, which also shows alts and status
